lots of updates

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,7 +1,7 @@
 @use './scss/globals/variables' as *;
 @use "./scss/pages";
 @use "./scss/components/portfolio-slider";
-@use "./scss/components/robot-cursor";
+@use "./scss/components/robot";
 @source "../views/";
 @source "../../app/";
 @import "@glidejs/glide/dist/css/glide.core.min.css";
