--- a/resources/css/scss/pages/_mixes.scss
+++ b/resources/css/scss/pages/_mixes.scss
@@ -3,7 +3,7 @@
   --fg: #{$text-dark}; 
   --bg: #{$white}; 
   --muted:#666; 
-  --accent: #{$secondary}; 
+  --accent: #{$primary}; 
 }
 body { 
   margin:0; 
